--- a/src/components/Jumbotron.css
+++ b/src/components/Jumbotron.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Patrick+Hand+SC%7CRoboto&display=swap');
-
 .jumbotron {
+    padding-top: 200px !important;
     font-family: 'Patrick Hand SC', cursive;
     background-color: #e5e2da !important;
 }
@@ -9,5 +8,16 @@
     webkit-box-shadow: -31px 10px 27px -26px rgba(148,143,148,1);
     -moz-box-shadow: -31px 10px 27px -26px rgba(148,143,148,1);
     box-shadow: -31px 10px 27px -26px rgba(148,143,148,1);
+}
+
+.jumbotron h2 {
+    font-family: 'Lato', sans-serif !important;
+}
+
+@media screen and (max-width: 1000px) {
+    .jumbotron {
+        padding-top: 150px !important;
+        margin: 0 auto;
+    }
 }
 
