--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@400;600;900&display=swap');
+
 .navbar {
   position: fixed !important;
   background-color: white;
@@ -8,6 +10,7 @@
 }
 
 .navbar-brand h1 {
+  font-family: 'Sansita Swashed', cursive;
   font-size: 4.5rem;
 }
 
